Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-07-27 (SVN):
    * hexen2/sys_win.c, hexenworld/client/sys_win.c (WinMain): Instead
      of using an empty string, use GetModuleFileName() to get the app's
      name. Remove the useless S_BlockSound() call. Detect early whether
      we are a dedicated server and allocate a console as the first job.
      Check for console allocation error cases. Separate the init splash
      window creation into a Sys_CreateInitSplash() helper procedure.

2011-07-27 (SVN):
    * printsys.h (DEBUG_Printf): Fixed a harmless copy and paste error
      in the C99 case of the macro.

2011-07-26 (SVN):
    * utils: updated the makefiles.

2011-07-26 (SVN):
    * Fixes for djgpp version check.

2011-07-25 (SVN):
    * libs/common/q_stdinc.h: Moved stdio.h include before q_stdint.h.

2011-07-25 (SVN):
    * utils, cmdlib.c (GetTime): Replaced time() by platform specific
      code.

2011-07-25 (SVN):
    * sys_unix.c, sys_win.c, sys_dos.c: Added Sys_DateTimeString() as a
      new helper procedure to get date/time in the "MM/DD/YYYY HH:MM:SS"
      format.
    * debuglog.c, host_cmd.c: Replaced the time() and strftime() calls by
      Sys_DateTimeString().

2011-07-25 (SVN):
    * hexen2/server/sys_win.c, hexenworld/server/sys_win.c: Replaced most
      of the crt calls, including conio code, by windows api calls. Clean
      up and tidy up.

2011-07-25 (SVN):
    * utils/common/cmdlib.c, util_io.c: Removed commented out code.

2011-07-25 (SVN):
    * h2patch/h2patch3.c: For DOS, replace gettimeofday() by uclock().

2011-07-25 (SVN):
    * sys_dos.c: Added information about uclock() extracted from DJGPP
      manual pages.

2011-07-25 (SVN):
    * hexen2/sys_win.c, hexenworld/client/sys_win.c: Replaced most of the
      crt calls by windows api calls. Clean up and tidy up.

2011-07-25 (SVN):
    * sys_win.c: Removed commented out macro.

2011-07-25 (SVN):